[#2174][#2183] Accept X.509 credentials
The registry implementations now accept X.509 credentials in update
Credentials requests. The registry now also removes existing credentials
on record that do not match any of the credentials in an update
Credentials request's body.

Fixes #2174
Fixes #2183

Conflicts:
	services/device-registry-base/src/main/java/org/eclipse/hono/deviceregistry/util/DeviceRegistryUtils.java
	services/device-registry-base/src/test/java/org/eclipse/hono/service/credentials/AbstractCredentialsServiceTest.java
	services/device-registry-file/src/test/java/org/eclipse/hono/deviceregistry/file/FileBasedCredentialsServiceTest.java
	site/documentation/content/api/management/device-registry-v1.yaml
	tests/src/test/java/org/eclipse/hono/tests/registry/CredentialsManagementIT.java

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>